fix button spacing for accessibility

--- a/index.css
+++ b/index.css
@@ -35,3 +35,7 @@ main {
 img {
   max-width: 100%;
 }
+
+.menuBtnMain {
+  padding: 2rem;
+}
